--- a/AdMon/res/layout/activity_details.xml
+++ b/AdMon/res/layout/activity_details.xml
@@ -9,22 +9,13 @@
     tools:context=".DetailsActivity" >
 
     <TextView
-        android:id="@+id/details_text_model"
+        android:id="@+id/details_text_price"
+        style="@style/CodeFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/details_button_pics"
+        android:layout_alignLeft="@+id/details_button_follow"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/details_text_name"
-        android:layout_marginTop="18dp"
-        android:layout_toLeftOf="@+id/details_image_thumb"
-        android:text="@string/details_text_model" />
-
-    <TextView
-        android:id="@+id/details_text_price1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/details_text_model"
-        android:layout_alignRight="@+id/details_text_model"
-        android:layout_below="@+id/details_text_model"
         android:layout_marginTop="23dp"
         android:text="@string/details_text_price1" />
 
@@ -32,9 +23,10 @@
         android:id="@+id/videoView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/details_text_model"
-        android:layout_below="@+id/details_text_price1"
-        android:layout_marginTop="146dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/details_button_pics" />
 
     <Button
         android:id="@+id/details_button_buy"
@@ -43,6 +35,7 @@
         android:layout_alignBaseline="@+id/details_button_follow"
         android:layout_alignBottom="@+id/details_button_follow"
         android:layout_alignRight="@+id/videoView1"
+        android:background="@drawable/roundedbutton"
         android:onClick="onBuy"
         android:text="@string/details_button_buy" />
 
@@ -50,34 +43,39 @@
         android:id="@+id/details_button_pics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/roundedbutton"
+        android:onClick="onPics"
         android:text="@string/details_button_pic" />
-
-    <Button
-        android:id="@+id/details_button_follow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/details_button_follow" />
 
     <TextView
         android:id="@+id/details_text_name"
+        style="@style/CodeFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/details_text_model"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="18dp"
+        android:layout_centerHorizontal="true"
         android:text="@string/details_text_name" />
 
     <ImageView
         android:id="@+id/details_image_thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/details_button_buy"
-        android:layout_alignLeft="@+id/details_button_follow"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/details_text_name"
+        android:layout_above="@+id/details_button_pics"
+        android:layout_alignLeft="@+id/details_button_pics"
+        android:layout_alignTop="@+id/details_text_price"
+        android:layout_toLeftOf="@+id/details_button_follow"
         android:src="@drawable/ic_launcher" />
+
+    <Button
+        android:id="@+id/details_button_follow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/details_image_thumb"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/roundedbutton"
+        android:onClick="onFollow"
+        android:text="@string/details_button_follow" />
 
 </RelativeLayout>
