--- a/AdMon/res/layout/activity_enter_id.xml
+++ b/AdMon/res/layout/activity_enter_id.xml
@@ -8,45 +8,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EnterIDActivity" >
 
-    <TextView
-        android:id="@+id/main_text_enterid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="62dp"
-        android:layout_marginTop="44dp"
-        android:text="@string/main_text_enterid" />
-
-    <EditText
-        android:id="@+id/main_edit_maintext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/main_text_enterid"
-        android:layout_below="@+id/main_text_enterid"
-        android:layout_marginTop="41dp"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/main_button_submit"
-        android:layout_width="wrap_content"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/main_edit_maintext"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
+        android:layout_alignLeft="@+id/main_text_enterid"
+        android:layout_alignRight="@+id/main_text_enterid"
+        android:layout_below="@+id/main_edit_code"
+        android:layout_marginTop="39dp"
+        android:background="@drawable/roundedbutton"
         android:onClick="onSubmit"
         android:text="@string/main_button_submit" />
 
     <Button
-        android:id="@+id/main_button_scan"
+        android:id="@+id/main_button_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/main_button_submit"
+        android:layout_alignRight="@+id/main_button_submit"
         android:layout_below="@+id/main_button_submit"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/roundedbutton"
+        android:onClick="onUpload"
+        android:text="@string/main_button_upload" />
+
+    <EditText
+        android:id="@+id/main_edit_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_text_enterid"
+        android:layout_centerHorizontal="true"
+        android:ems="10" />
+
+    <TextView
+        android:id="@+id/main_text_enterid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_button_scan"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:text="@string/main_text_enterid" />
+
+    <Button
+        android:id="@+id/main_button_scan"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/main_text_enterid"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/main_text_enterid"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/roundedbutton"
         android:onClick="onScan"
         android:text="@string/main_button_scan" />
 
