--- a/AdMon/res/values/styles.xml
+++ b/AdMon/res/values/styles.xml
@@ -16,5 +16,32 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+    
+    
+    <style name="CodeFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#38ACEC</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+    <color name="custom_theme_color">#FFFFFF</color>
+	<style name="CustomTheme" parent="android:Theme.Light">
+    	<item name="android:windowBackground">@color/custom_theme_color</item>
+    	<item name="android:colorBackground">@color/custom_theme_color</item>
+	</style>
+	<color name="Butterfly_blu_theme_color">#38ACEC</color>
+	<style name="Butterfly_blu_theme" parent="android:Theme.Light">
+    	<item name="android:windowBackground">@color/Butterfly_blu_theme_color</item>
+    	<item name="android:colorBackground">@color/Butterfly_blu_theme_color</item>
+	</style>
+	<style name="CKButton" parent="android:style/Widget.Button">
+  <item name="android:textSize">19sp</item>
+  <item name="android:layout_margin">0dip</item>
+  <item name="android:background">#ff0000</item>
+ </style>
+	<style name="ApplicationStyle" parent="android:Theme">
+		  <item name="android:button">@style/CKButton</item>
+	 </style>
+	
+	
 </resources>
